[package]
name = "sort-it"
version = "0.2.0"
edition = "2021"
description = "Provides various sorting algorithms"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/discobiscuit99/sort-it"
repository = "https://github.com/discobiscuit99/sort-it"
readme = "README.md"
keywords = ["sorting", "algorithms"]
exclude = [
    "notes.md",
    "src/main.rs",
    "src/tests.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
